tests/fixtures/positive/architecture/package-dependency-cycle/app/src/main/kotlin/com/example/b/B.kt
package com.example.b

import com.example.a.A

class B(private val dependency: A)
