tests/fixtures/negative/architecture/package-dependency-cycle/app/src/main/kotlin/com/example/b/B.kt
package com.example.b

import com.example.c.C

class B(private val dependency: C)
